--- a/index.html
+++ b/index.html
@@ -714,16 +714,17 @@ var i = 0;
 
 var nodes = d3.range(data.length).map(function(idx) {
 
-  console.log(data[idx]);
+  var i = Math.floor(Math.random() * m),
+      r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
 
-      var d = {cluster: data[idx].TypeID, radius: 10};
-      clusters[i] = d;
-  //if (!clusters[i] || (r > clusters[i].radius)) clusters[i] = d;
-  console.log(d);
+      d = {cluster: data[idx].TypeID, radius: 10};
+  if (!clusters[i] || (r > clusters[i].radius)) {
+    clusters[i] = d;
+  }
+  //console.log(d);
 
   return d;
 }); 
-
 
 var force = d3.layout.force()
     .nodes(nodes)
