--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ _
 var width = 960,
     height = 500,
     padding = 3, // separation between same-color circles
-    clusterPadding = 10
+    clusterPadding = 30
     , // separation between different-color circles
     maxRadius = 20;
 
@@ -714,8 +714,9 @@ var i = 0;
 
 var nodes = d3.range(data.length).map(function(idx) {
 
-  var i = Math.floor(Math.random() * m),
-      r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
+  var i = data[idx].TypeID;
+
+  var r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
 
       d = {cluster: data[idx].TypeID, radius: 10};
   if (!clusters[i] || (r > clusters[i].radius)) {
