Minor style fixes

--- a/index.html
+++ b/index.html
@@ -11,54 +11,54 @@
         <img class="mr2" src="http://placehold.it/50x50">
       </div>
       <div class="flex mr4">
-        <a class="flex items-center mr2" href="https://twitter.com/intent/tweet?text=Share+it+on+Twitter!+Showcase+your+project+to+the+world!+#onTheMap+via+%40im_felix">
+        <a class="flex items-center mr4" href="https://twitter.com/home?status=Based%20in%20QLD?%20Working%20on%20an%20awesome%20project?%20Showcase%20it!%20%23PutItonTheMap%20%23govhack%20%40govhackBNE%20%0A">
           Share it on Twitter! Showcase your project to the world! #onTheMap
         </a>
-        <a class="flex items-center rounded bg-grey-light py2 px4" href=""#>
+        <a class="flex items-center action rounded bg-grey-light py2 px4" href=""#>
           Add your innovation
         </a>
       </div>
     </header>
     <nav class="flex flex-column absolute r0 b0 mr4 mb4 right-align">
       <h2 class="uppercase font-small grey mt0 medium">Top 10 Innovative Space</h2>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">Health Care</h4>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #1f77b4;">
+        <h4 class="font-small mr1 my0 regular">Agriculture</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #ff7f0e;">
         <h4 class="font-small mr1 my0 regular">Education</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #2ca02c;">
+        <h4 class="font-small mr1 my0 regular">Energy</h4>
+        <p class="font-larger my0 industry line-height-smaller regular">60</p>
+      </a>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #8c564b;">
+        <h4 class="font-small mr1 my0 regular">Entrepreneurialism</h4>
+        <p class="font-larger my0 industry line-height-smaller regular">12</p>
+      </a>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #9467bd;">
         <h4 class="font-small mr1 my0 regular">Environment</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">Agriculture</h4>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #7f7f7f;">
+        <h4 class="font-small mr1 my0 regular">Health</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">Design</h4>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #e377c2;">
+        <h4 class="font-small mr1 my0 regular">Information Media</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">Energy</h4>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #d62728;">
+        <h4 class="font-small mr1 my0 regular">Manufacturing</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">FinTech</h4>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2" href=""# style="color: #bcbd22;">
+        <h4 class="font-small mr1 my0 regular">Mining and Resources</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">Consumer</h4>
-        <p class="font-larger my0 industry line-height-smaller regular">12</p>
-      </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb2" href=""#>
-        <h4 class="font-small mr1 my0 regular">Small Businesses</h4>
-        <p class="font-larger my0 industry line-height-smaller regular">60</p>
-      </a>
-      <a class="flex justify-end items-baseline right-align border rounded p1 mb0" href=""#>
-        <h4 class="font-small mr1 my0 regular">Research Papers</h4>
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb0" href=""# style="color: #17becf;">
+        <h4 class="font-small mr1 my0 regular">Professional Services</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
     </nav>
@@ -783,7 +783,6 @@ var nodes = d3.range(data.length).map(function(idx) {
   if (!clusters[i] || (r > clusters[i].radius)) {
     clusters[i] = d;
   }
-  //console.log(d);
 
   return d;
 });
