--- a/index.html
+++ b/index.html
@@ -753,11 +753,10 @@ _
 
 
 var onClickFilter = function (idx){
-      console.log(circle);
-
   if(isCategoryOn[idx]) {
     // Take out the circle
     //svg.selectAll("circle").remove;
+
     svg.selectAll("circle").filter(function(d){ return d.cluster === idx }).style("visibility","hidden");
 
   } else {
@@ -803,13 +802,14 @@ var nodes = d3.range(data.length).map(function(idx) {
 
   var r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
 
-      d = {cluster: data[idx].TypeID, radius: 10};
+      d = {cluster: data[idx].TypeID, radius: 10,data:data[idx]};
   if (!clusters[i] || (r > clusters[i].radius)) {
     clusters[i] = d;
   }
-  console.log(d);
   return d;
 });
+
+
 
 var force = d3.layout.force()
     .nodes(nodes)
@@ -823,6 +823,10 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
+var div = d3.select("body").append("div")   
+    .attr("class", "tooltip")               
+    .style("opacity", 0);
+
 var circle = svg.selectAll("circle")
     .data(nodes)
     .enter().append("circle")
@@ -830,6 +834,19 @@ var circle = svg.selectAll("circle")
     .attr("cluster",function(d){return d.cluster})
     .style("fill", function(d) { return color[d.cluster]; })
     .on("click",elementOnClick)
+    .on("mouseover", function(d) {      
+            div.transition()        
+                .duration(200)      
+                .style("opacity", 0.9);      
+            div .html(d.data.Company + "<br/>" + d.data.Summary )  
+                .style("left", (d3.event.pageX) + "px")     
+                .style("top", (d3.event.pageY - 28) + "px");    
+            })                  
+    .on("mouseout", function(d) {       
+            div.transition()        
+                .duration(500)      
+                .style("opacity", 0);   
+        })
     .call(force.drag);
 
 function elementOnClick(element) {
