--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a class="flex items-center mr4" href="https://twitter.com/home?status=Based%20in%20QLD?%20Working%20on%20an%20awesome%20project?%20Showcase%20it!%20%23PutItonTheMap%20%23govhack%20%40govhackBNE%20%0A">
         <span class="underline mr1">Share it on Twitter!</span> Showcase your project to the world! #onTheMap
       </a>
-      <a class="flex items-center action rounded bg-grey-dark white py2 px4" href="/add.html">
+      <a class="flex items-center action rounded bg-grey-dark white py2 px4" href="add.html">
         Add your innovation
       </a>
     </div>
