--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" type="text/css" href="normalize.css">
 <body class="h-100">
   <header class="flex justify-between py4 ml4">
-    <a href="/" class="flex">
+    <a href="https://billymwlei.github.io/govhack2016" class="flex">
       <img class="mr2" src="images/logo.svg">
     </a>
     <div class="flex mr4">
