Fixing links, colors, and logo image

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <body class="h-100">
 <header class="flex justify-between py4 ml4">
       <div class="flex">
-        <img class="mr2" src="http://placehold.it/50x50">
+        <img class="mr2" src="images/logo.svg">
       </div>
       <div class="flex mr4">
         <a class="flex items-center mr4" href="https://twitter.com/home?status=Based%20in%20QLD?%20Working%20on%20an%20awesome%20project?%20Showcase%20it!%20%23PutItonTheMap%20%23govhack%20%40govhackBNE%20%0A">
           Share it on Twitter! Showcase your project to the world! #onTheMap
         </a>
-        <a class="flex items-center action rounded bg-grey-light py2 px4" href=""#>
+        <a class="flex items-center action rounded white bg-grey-dark py2 px4" href="/add.html">
           Add your innovation
         </a>
       </div>
@@ -38,43 +38,43 @@
     <nav class="flex flex-column absolute r0 b0 mr4 mb4 right-align">
       <h2 class="uppercase font-small grey mt0 medium">Top 10 Innovative Space</h2>
 
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #1f77b4;" onclick="onClickFilter(1)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #ff7f0e;" onclick="onClickFilter(1)">
         <h4 class="font-small mr1 my0 regular">Agriculture</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #ff7f0e;" onclick="onClickFilter(2)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #2ca02c;" onclick="onClickFilter(2)">
         <h4 class="font-small mr1 my0 regular">Education</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #2ca02c;" onclick="onClickFilter(3)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #d62728;" onclick="onClickFilter(3)">
         <h4 class="font-small mr1 my0 regular">Energy</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #8c564b;" onclick="onClickFilter(4)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #9467bd;" onclick="onClickFilter(4)">
         <h4 class="font-small mr1 my0 regular">Entrepreneurialism</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #9467bd;" onclick="onClickFilter(5)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #8c564b;" onclick="onClickFilter(5)">
         <h4 class="font-small mr1 my0 regular">Environment</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #7f7f7f;" onclick="onClickFilter(6)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #e377c2;" onclick="onClickFilter(6)">
         <h4 class="font-small mr1 my0 regular">Health</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #e377c2;" onclick="onClickFilter(7)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #7f7f7f;" onclick="onClickFilter(7)">
         <h4 class="font-small mr1 my0 regular">Information Media</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #d62728;" onclick="onClickFilter(8)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #bcbd22;" onclick="onClickFilter(8)">
         <h4 class="font-small mr1 my0 regular">Manufacturing</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #bcbd22;" onclick="onClickFilter(9)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb2"  style="color: #17becf;" onclick="onClickFilter(9)">
         <h4 class="font-small mr1 my0 regular">Mining and Resources</h4>
         <p class="font-larger my0 industry line-height-smaller regular">60</p>
       </a>
-      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb0"  style="color: #17becf;" onclick="onClickFilter(0)">
+      <a class="flex hover-opacity justify-end items-baseline right-align border rounded p1 mb0"  style="color: #1f77b4;" onclick="onClickFilter(0)">
         <h4 class="font-small mr1 my0 regular">Professional Services</h4>
         <p class="font-larger my0 industry line-height-smaller regular">12</p>
       </a>
@@ -776,8 +776,8 @@ var onClickFilter = function (idx){
 };
 
 
-var width = 1170,
-    height = 900,
+var width = 900,
+    height = 500,
     padding = 3, // separation between same-color circles
     clusterPadding = 30
     , // separation between different-color circles
