--- a/index.html
+++ b/index.html
@@ -742,159 +742,176 @@ var data = [
     "Sector": "Professional, scientific and technical services",
     "TypeID": 0
   }
-];
-var sortedData =
-_
-.chain(data)
-.groupBy('Sector')
-.map(function(value, key) {
-    isCategoryOn.push(true);
-    console.log(key);
-    return {
-        type: key,
-        companies: value
+];var sortedData =
+    _
+    .chain(data)
+    .groupBy('Sector')
+    .map(function(value, key) {
+        isCategoryOn.push(true);
+        console.log(key);
+        return {
+            type: key,
+            companies: value
+        }
+    })
+    .value();
+var onClickFilter = function(idx) {
+
+    if (isCategoryOn[idx]) {
+        // Take out the circle
+        //svg.selectAll("circle").remove;
+
+        svg.selectAll("circle").filter(function(d) {
+            return d.cluster === idx
+        }).style("visibility", "hidden");
+        //svg.selectAll("circle").filter(function(d){ return d.cluster !== idx }).style("visibility","hidden");
+
+    } else {
+        // Put the circle back
+        svg.selectAll("circle").filter(function(d) {
+            return d.cluster === idx
+        }).style("visibility", "visible");
+        //svg.selectAll("circle").filter(function(d){ return d.cluster !== idx }).style("visibility","visible");
+
     }
-})
-.value();
-var onClickFilter = function (idx){
 
-  if(isCategoryOn[idx]) {
-    // Take out the circle
-    //svg.selectAll("circle").remove;
-
-    svg.selectAll("circle").filter(function(d){ return d.cluster === idx }).style("visibility","hidden");
-    //svg.selectAll("circle").filter(function(d){ return d.cluster !== idx }).style("visibility","hidden");
-
-  } else {
-    // Put the circle back
-    svg.selectAll("circle").filter(function(d){ return d.cluster === idx }).style("visibility","visible");
-    //svg.selectAll("circle").filter(function(d){ return d.cluster !== idx }).style("visibility","visible");
-
-  }
-
-  isCategoryOn[idx] = !isCategoryOn[idx];
+    isCategoryOn[idx] = !isCategoryOn[idx];
 };
 
 
 var width = 900,
     height = 500,
     padding = 3, // separation between same-color circles
-    clusterPadding = 30
-    , // separation between different-color circles
+    clusterPadding = 30, // separation between different-color circles
     maxRadius = 20;
 
 var n = data.length, // total number of circles
     m = 10; // number of distinct clusters
 
 var color = ['#1f77b4',
-            '#ff7f0e',
-            '#2ca02c',
-            '#d62728',
-            '#9467bd',
-            '#8c564b',
-            '#e377c2',
-            '#7f7f7f',
-            '#bcbd22',
-            '#17becf']
-// The largest node for each cluster.
+             '#ff7f0e',
+             '#2ca02c',
+             '#d62728',
+             '#9467bd',
+             '#8c564b',
+             '#e377c2',
+             '#7f7f7f',
+             '#bcbd22',
+             '#17becf']
 var clusters = new Array(m);
 var i = 0;
 var nodes = d3.range(data.length).map(function(idx) {
-var i = data[idx].TypeID;
-var r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
-d = {cluster: data[idx].TypeID, radius: 10,data:data[idx]};
-if (!clusters[i] || (r > clusters[i].radius)) {
-clusters[i] = d;
-}
-return d;
+    var i = data[idx].TypeID;
+    var r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
+        d = {
+            cluster: data[idx].TypeID,
+            radius: 10,
+            data: data[idx]
+        };
+    if (!clusters[i] || (r > clusters[i].radius)) {
+        clusters[i] = d;
+    }
+    return d;
 });
 var force = d3.layout.force()
-.nodes(nodes)
-.size([width, height])
-.gravity(.02)
-.charge(0)
-.on("tick", tick)
-.start();
+    .nodes(nodes)
+    .size([width, height])
+    .gravity(.02)
+    .charge(0)
+    .on("tick", tick)
+    .start();
 var svg = d3.select("body").append("svg")
-.attr("width", width)
-.attr("height", height);
+    .attr("width", width)
+    .attr("height", height);
 var div = d3.select("body").append("div")
-.attr("class", "tooltip")
-.style("opacity", 0);
+    .attr("class", "tooltip")
+    .style("opacity", 0);
 var circle = svg.selectAll("circle")
-.data(nodes)
-.enter().append("circle")
-.attr("r", function(d) { return d.radius; })
-.attr("cluster",function(d){return d.cluster})
-.style("fill", function(d) { return color[d.cluster]; })
-.on("click",elementOnClick)
-.on("mouseover", function(d) {
-div.transition()
-.duration(200)
-.style("opacity", 0.9);
-div .html(d.data.Company + "<br/>" + d.data.Summary )
-.style("left", (d3.event.pageX) + "px")
-.style("top", (d3.event.pageY - 28) + "px");
-})
-.on("mouseout", function(d) {
-div.transition()
-.duration(500)
-.style("opacity", 0);
-})
-.call(force.drag);
+    .data(nodes)
+    .enter().append("circle")
+    .attr("r", function(d) {
+        return d.radius;
+    })
+    .attr("cluster", function(d) {
+        return d.cluster
+    })
+    .style("fill", function(d) {
+        return color[d.cluster];
+    })
+    .on("click", elementOnClick)
+    .on("mouseover", function(d) {
+        div.transition()
+            .duration(200)
+            .style("opacity", 0.9);
+        div.html(d.data.Company + "<br/>" + d.data.Summary)
+            .style("left", (d3.event.pageX) + "px")
+            .style("top", (d3.event.pageY - 28) + "px");
+    })
+    .on("mouseout", function(d) {
+        div.transition()
+            .duration(500)
+            .style("opacity", 0);
+    })
+    .call(force.drag);
+
 function elementOnClick(element) {
-console.log(element);
+    console.log(element);
 }
+
 function tick(e) {
-circle
-.each(cluster(10 * e.alpha * e.alpha))
-.each(collide(.5))
-.attr("cx", function(d) { return d.x; })
-.attr("cy", function(d) { return d.y; });
+    circle
+        .each(cluster(10 * e.alpha * e.alpha))
+        .each(collide(.5))
+        .attr("cx", function(d) {
+            return d.x;
+        })
+        .attr("cy", function(d) {
+            return d.y;
+        });
 }
 // Move d to be adjacent to the cluster node.
 function cluster(alpha) {
-return function(d) {
-var cluster = clusters[d.cluster];
-if (cluster === d) return;
-var x = d.x - cluster.x,
-y = d.y - cluster.y,
-l = Math.sqrt(x * x + y * y),
-r = d.radius + cluster.radius;
-if (l != r) {
-l = (l - r) / l * alpha;
-d.x -= x *= l;
-d.y -= y *= l;
-cluster.x += x;
-cluster.y += y;
-}
-};
+    return function(d) {
+        var cluster = clusters[d.cluster];
+        if (cluster === d) return;
+        var x = d.x - cluster.x,
+            y = d.y - cluster.y,
+            l = Math.sqrt(x * x + y * y),
+            r = d.radius + cluster.radius;
+        if (l != r) {
+            l = (l - r) / l * alpha;
+            d.x -= x *= l;
+            d.y -= y *= l;
+            cluster.x += x;
+            cluster.y += y;
+        }
+    };
 }
 // Resolves collisions between d and all other circles.
 function collide(alpha) {
-var quadtree = d3.geom.quadtree(nodes);
-return function(d) {
-var r = d.radius + maxRadius + Math.max(padding, clusterPadding),
-nx1 = d.x - r,
-nx2 = d.x + r,
-ny1 = d.y - r,
-ny2 = d.y + r;
-quadtree.visit(function(quad, x1, y1, x2, y2) {
-if (quad.point && (quad.point !== d)) {
-var x = d.x - quad.point.x,
-y = d.y - quad.point.y,
-l = Math.sqrt(x * x + y * y),
-r = d.radius + quad.point.radius + (d.cluster === quad.point.cluster ? padding : clusterPadding);
-if (l < r) {
-l = (l - r) / l * alpha;
-d.x -= x *= l;
-d.y -= y *= l;
-quad.point.x += x;
-quad.point.y += y;
-}
-}
-return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
-});
-};
+    var quadtree = d3.geom.quadtree(nodes);
+    return function(d) {
+        var r = d.radius + maxRadius + Math.max(padding, clusterPadding),
+            nx1 = d.x - r,
+            nx2 = d.x + r,
+            ny1 = d.y - r,
+            ny2 = d.y + r;
+        quadtree.visit(function(quad, x1, y1, x2, y2) {
+            if (quad.point && (quad.point !== d)) {
+                var x = d.x - quad.point.x,
+                    y = d.y - quad.point.y,
+                    l = Math.sqrt(x * x + y * y),
+                    r = d.radius + quad.point.radius + (d.cluster === quad.point.cluster ? padding : clusterPadding);
+                if (l < r) {
+                    l = (l - r) / l * alpha;
+                    d.x -= x *= l;
+                    d.y -= y *= l;
+                    quad.point.x += x;
+                    quad.point.y += y;
+                }
+            }
+            return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+        });
+    };
 }
 </script>
