--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 <script src="https://use.typekit.net/mba3tyv.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+
 <script>
 var isCategoryOn = [];
 var data = [
