--- a/add.html
+++ b/add.html
@@ -24,7 +24,7 @@
 <body class="h-100">
   <header class="flex justify-between py4 ml4 fade-in-up">
     <a class="flex" href="/">
-      <img class="ml2" src="images/logo.svg">
+      <img class="ml2" src="images/innovationx-logo.svg">
     </div>
     <div class="flex mr4">
       <a class="flex items-center mr4" href="https://twitter.com/home?status=Based%20in%20QLD?%20Working%20on%20an%20awesome%20project?%20Showcase%20it!%20%23PutItonTheMap%20%23govhack%20%40govhackBNE%20%0A">
